Fix reference table alignment bug in Firefox.

--- a/Styles/Reference.css
+++ b/Styles/Reference.css
@@ -17,6 +17,7 @@ h3 {
     text-align: left;
     overflow-x: auto;
     max-width: fit-content;
+    max-width: -moz-fit-content;
 }
 
 #referenceTable th {
